Javascript files checked by gjslint

--- a/main.html
+++ b/main.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-
 		<head>
-
 				<title>toDo - Doing - Done タスク管理</title>
 				<script type="text/javascript" src="https://www.google.com/jsapi?key=ABQIAAAA-aGhuJZ-CMEg8FC1ye2K7hTdKfYxxnMWp9Q1PD5tBxuGtHtNXxT4SId1T4BOOBVcv9fxVp9H1Yp71Q"></script>
 				<script language="javascript" type="text/javascript">
@@ -18,17 +16,15 @@
 				</script>
 				<link rel="stylesheet" href="/static/css/default.css" />
 		</head>
-
 		<body>
-
 				<p>Hello world</p>
-				<div class="task-box-border task-box-shadow task-box-trasform task-box-color0">
+				<div id="task-box-0" class="task-box-border task-box-shadow task-box-trasform task-box-color0">
 					<p>toDo</p>
 				</div>
-				<div class="task-box-border task-box-shadow task-box-trasform task-box-color1">
+				<div id="task-box-1" class="task-box-border task-box-shadow task-box-trasform task-box-color1">
 					<p>doing</p>
 				</div>
-				<div class="task-box-border task-box-shadow task-box-trasform task-box-color2">
+				<div id="task-box-2" class="task-box-border task-box-shadow task-box-trasform task-box-color2">
 					<p>Done</p>
 				</div>
 
