--- a/main.html
+++ b/main.html
@@ -21,18 +21,19 @@
 						google.setOnLoadCallback(OnLoad);
 
 				</script>
+				<link href='http://fonts.googleapis.com/css?family=Dancing+Script&text=toDoinged' rel='stylesheet' type='text/css'>
 				<link rel="stylesheet" href="/static/css/default.css" />
 		</head>
 		<body>
-				<p>Hello world</p>
+				<h1>Hello world</h1>
 				<div id="task-box-0" class="task-box-border task-box-shadow task-box-trasform task-box-color0">
-					<p>toDo</p>
+					<h2>toDo</h2>
 				</div>
 				<div id="task-box-1" class="task-box-border task-box-shadow task-box-trasform task-box-color1">
-					<p>doing</p>
+					<h2>Doing</h2>
 				</div>
 				<div id="task-box-2" class="task-box-border task-box-shadow task-box-trasform task-box-color2">
-					<p>Done</p>
+					<h2>Done</h2>
 				</div>
 
 
