JSONデータロード機能作成 スタイルシートの修正（カラム幅設定、ローディングイメージ設定）

--- a/main.html
+++ b/main.html
@@ -9,17 +9,24 @@
 		</head>
 		<body>
 				<h1>Hello world</h1>
-				<div id="task-box-0" class="task-box-border task-box-shadow task-box-trasform task-box-color0">
+				<div id="task-box-0" class="task-box task-box-border task-box-shadow task-box-trasform task-box-color0">
 					<h2>toDo</h2>
+					<div id="status0">
+						<div id="loading0" class="loading-box"></div>
+					</div>
 				</div>
-				<div id="task-box-1" class="task-box-border task-box-shadow task-box-trasform task-box-color1">
-					<h2>Doing</h2>
-				</div>
-				<div id="task-box-2" class="task-box-border task-box-shadow task-box-trasform task-box-color2">
+				<div id="task-box-2" class="task-box task-box-border task-box-shadow task-box-trasform task-box-color2">
 					<h2>Done</h2>
+					<div id="status2">
+						<div id="loading2" class="loading-box"></div>
+					</div>
 				</div>
-
-
+				<div id="task-box-1" class="task-box task-box-border task-box-shadow task-box-trasform task-box-color1">
+					<h2>Doing</h2>
+					<div id="status1">
+						<div id="loading1" class="loading-box"></div>
+					</div>
+				</div>
 
 		</body>
 
