--- a/main.html
+++ b/main.html
@@ -21,24 +21,25 @@
 				</fieldset>
 			</form>				
 		</div>
+		<div id="input-box-buttom"></div>
 
 		<div id="task-box-0" class="task-box task-box-border task-box-shadow task-box-trasform task-box-color0">
 			<h2>toDo</h2>
-			<div id="status0">
+			<ul id="status0" class="notes droppable">
 				<div id="loading0" class="loading-box"></div>
-			</div>
+			</ul>
 		</div>
 		<div id="task-box-2" class="task-box task-box-border task-box-shadow task-box-trasform task-box-color2">
 			<h2>Done</h2>
-			<div id="status2">
+			<ul id="status2"class="notes droppable" >
 				<div id="loading2" class="loading-box"></div>
-			</div>
+			</ul>
 		</div>
 		<div id="task-box-1" class="task-box task-box-border task-box-shadow task-box-trasform task-box-color1">
 			<h2>Doing</h2>
-			<div id="status1">
+			<ul id="status1" class="notes droppable">
 				<div id="loading1" class="loading-box"></div>
-			</div>
+			</ul>
 		</div>
 		</body>
 
