--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 					<p>
 						<label for="task">Add Your Task</label>
 						<textarea name="task" id="task" rows="2" cols="20" tabindex="0"></textarea>
-						<button id="create-task-button">追加</button>	
+						<a id="create-task-button" class="btn">追加</a>
 					</p>
 				</fieldset>
 			</form>				
