ErrorHandler系の処理をファイル分割。

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/static/css/jquery.jgrowl.css" type="text/css" />
 		<link rel="stylesheet" href="/static/css/default.css" type="text/css" />
 		<link rel="stylesheet" href="/static/css/layout.css" type="text/css" />
-		<link rel='stylesheet' ref='http://fonts.googleapis.com/css?family=Dancing+Script&text=toDoinged' type='text/css' />
+		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Dancing+Script&text=toDoinged' type='text/css' />
 	
 	</head>
 	<body>
